--- a/src/app.css
+++ b/src/app.css
@@ -38,45 +38,6 @@ a {
   text-decoration: none;
   color: inherit;
 }
-/* Buttons */
-
-button,
-.button {
-  display: inline-block;
-  border-radius: 100px;
-  padding: 8px 16px;
-  font-size: 16px;
-  background: none;
-  font: "Nunito Sans", sans-serif;
-  outline: none;
-  text-decoration: none;
-  font-weight: bold;
-  border: none;
-}
-button:hover,
-.button:hover {
-  filter: brightness(90%);
-}
-
-.circle-button {
-  display: inline-block;
-  border-radius: 100px;
-  width: 48px;
-  height: 48px;
-  font-size: 16px;
-  background: none;
-  font: "Nunito Sans", sans-serif;
-  outline: none;
-  text-decoration: none;
-  font-weight: bold;
-  border: 2px solid v-bind("color.fg");
-  color: v-bind("color.fg");
-  display: grid;
-  place-items: center;
-}
-.circle-button :hover {
-  filter: brightness(90%);
-}
 
 /* Transitions */
 
@@ -94,4 +55,8 @@ button:hover,
 
 [v-cloak] {
   display: none;
+}
+
+.debug {
+  border: 2px solid red;
 }
